<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#beafe0"
    tools:context=".Activity1">


    <Button
        android:id="@+id/but_change"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/changed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/but_exit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_indicaterange"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="#3b383a"
        android:gravity="center"
        android:text="@string/indicate_range"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_label" />

    <TextView
        android:id="@+id/textView_label"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:background="#3b383a"
        android:gravity="center"
        android:text="@string/you_will_guess"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_answer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="#3b383a"
        android:gravity="center"
        android:text="@string/my_number_is"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but_apply" />

    <LinearLayout
        android:id="@+id/Layout_g"
        android:layout_width="282dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_indicaterange">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="7sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_from"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="#3b383a"
                android:gravity="center"
                android:text="@string/from"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView_before"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="#3b383a"
                android:gravity="center"
                android:text="@string/before"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="7sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/fromt"
                android:inputType="number"
                android:minHeight="48dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_before"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/beforet"
                android:inputType="number"
                android:minHeight="48dp"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/but_apply"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:text="@string/aplly"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Layout_g" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="279dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_answer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_answeq"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_marginTop="5dp"
                android:background="#3b383a"
                android:gravity="center"
                android:text="@string/q"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/your_guess"
                android:inputType="number"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/but_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Set" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>